# dci-core-qml

./: CMakeLists.txt
include/dci/: qml.hpp
include/dci/qml/: api.hpp  app.hpp  ep.hpp  exception_cast.hpp  future_cast.hpp  qmeta.hpp  value_cast.hpp
include/dci/qml/qmeta/: call.hpp  common.hpp  data.hpp  def.hpp  object.hpp  proxyProvider.hpp  stringdata.hpp  superdata.hpp
include/dci/qml/qmeta/api/: ctor.hpp  info.hpp  meth.hpp  prop.hpp
include/dci/qml/qmeta/def/: cmtFuture.hpp  containerIterator.hpp  idlException.hpp  idlInterface.hpp  idlStruct.hpp  primitivesArray.hpp  primitivesList.hpp  primitivesMap.hpp  primitivesSet.hpp  sbsOwner.hpp  sbsSignal.hpp
include/dci/qml/qmeta/def/container/: assembly.hpp  iterator.hpp
include/dci/qml/qmeta/def/container/face/: generic.hpp  iterable.hpp
resources/: qt.conf
src/: app.cpp  ep.cpp  eventDispatcher.cpp  eventDispatcher.hpp  exceptionConvert.hpp  handler.cpp  handler.hpp  hook.cpp  hook.hpp  pch.hpp  victim.cpp  victim.hpp
src/ep/: manager.cpp  manager.hpp  model.cpp  model.hpp  selection.cpp  selection.hpp
src/eventDispatcher/: sockets.cpp  sockets.hpp  timers.cpp  timers.hpp
src/impl/: app.cpp  app.hpp
test/: qmeta_array.cpp  qmeta_interface.cpp  qmeta_stringdata.cpp  victim.idl
